# ros2-vicon-receiver

uned_vicon_sim/: package.xml  setup.cfg  setup.py
uned_vicon_sim/uned_vicon_sim/: vicon_gazebo.py  vicon_webots.py
vicon_gazebo/: CMakeLists.txt  package.xml
vicon_gazebo/include/vicon_gazebo/: ViconGazebo.hpp
vicon_gazebo/src/: vicon_gazebo.cpp
vicon_receiver/: CMakeLists.txt  package.xml
vicon_receiver/include/vicon_receiver/: publisher.hpp
vicon_receiver/src/vicon_receiver/: communicator.cpp  publisher.cpp
